tests/error/iter_errors/iter_missing.err
Error: Not iterable (at $FILE:12:13)
   | 
10 | @guppy
11 | def test(x: MyType) -> None:
12 |     for _ in x:
   |              ^ Expression of type `MyType` is not iterable

Help: Implement missing method: `__iter__: MyType -> ?Iter`

Guppy compilation failed due to 1 previous error
